src/test/vm/redeclared_method.php.exp
HipHop Fatal error: Redeclared method C::f on line 6
