src/test/vm/redeclared_method.php.filter
#!/bin/bash

sed -e 's/ in .* on/ on/'
